# atmn

./: .gitignore  LICENSE  README.md  pypi.md  pyproject.toml
docs/: FolderStructure.md  ScenarioConfig.md  ScenarioLoader.md
examples/: Quickstart.ipynb
examples/my_collection/: config.xml
src/atmn/: ScenarioExporter.py  ScenarioGenerator.py  ScenarioLoader.py  ScenarioVisualizer.py  __init__.py  __main__.py  config_schema.xsd
